plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.odte'
version = '0.0.1-SNAPSHOT'
description = 'odte topic curator'

java {
	toolchain { languageVersion = JavaLanguageVersion.of(21) }
}

configurations {
	compileOnly { extendsFrom annotationProcessor }
}

repositories { mavenCentral() }

dependencies {
	runtimeOnly 'com.h2database:h2'

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.security:spring-security-crypto'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

	// DB
	runtimeOnly   'com.mysql:mysql-connector-j'

	// 문서
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// (선택) 소셜로그인 할거면 유지
	// implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// (선택) .env 라이브러리 대신 스프링 환경변수 권장
	// implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') { useJUnitPlatform() }
